--- a/rpa-certificates-of-free-sale/Logic Workflows/UserCheckAddress.xaml
+++ b/rpa-certificates-of-free-sale/Logic Workflows/UserCheckAddress.xaml
@@ -8,7 +8,7 @@
   <mva:VisualBasic.Settings>
     <x:Null />
   </mva:VisualBasic.Settings>
-  <sap:VirtualizedContainerService.HintSize>1157,830</sap:VirtualizedContainerService.HintSize>
+  <sap:VirtualizedContainerService.HintSize>1794,830</sap:VirtualizedContainerService.HintSize>
   <sap2010:WorkflowViewState.IdRef>UserCheckAddress_1</sap2010:WorkflowViewState.IdRef>
   <TextExpression.NamespacesForImplementation>
     <scg:List x:TypeArguments="x:String" Capacity="22">
@@ -121,7 +121,7 @@
               <av:PointCollection x:Key="ConnectorLocation">300,312.04 300,364.5</av:PointCollection>
             </scg:Dictionary>
           </sap:WorkflowViewStateService.ViewState>
-          <Sequence DisplayName="Get IN Args - Testing" sap:VirtualizedContainerService.HintSize="550,602" sap2010:WorkflowViewState.IdRef="Sequence_13">
+          <Sequence DisplayName="Get IN Args - Testing" sap:VirtualizedContainerService.HintSize="200,66" sap2010:WorkflowViewState.IdRef="Sequence_13">
             <sap:WorkflowViewStateService.ViewState>
               <scg:Dictionary x:TypeArguments="x:String, x:Object">
                 <x:Boolean x:Key="IsExpanded">True</x:Boolean>
@@ -132,9 +132,7 @@
                 <ui:InvokeWorkflowFile ContinueOnError="{x:Null}" DisplayName="Invoke Workflow File" sap:VirtualizedContainerService.HintSize="334,87" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_2" UnSafe="False" WorkflowFileName="Logic Workflows\Start Up\Config Reader.xaml">
                   <ui:InvokeWorkflowFile.Arguments>
                     <InArgument x:TypeArguments="x:String" x:Key="IN_strConfigPath" />
-                    <OutArgument x:TypeArguments="scg:Dictionary(x:String, ui:GenericValue)" x:Key="OUT_dictConfig">
-                      <mva:VisualBasicReference x:TypeArguments="scg:Dictionary(x:String, ui:GenericValue)" ExpressionText="IN_dictConfig" />
-                    </OutArgument>
+                    <OutArgument x:TypeArguments="scg:Dictionary(x:String, ui:GenericValue)" x:Key="OUT_dictConfig">[IN_dictConfig]</OutArgument>
                     <OutArgument x:TypeArguments="scg:Dictionary(x:String, x:String)" x:Key="OUT_dictFormFields" />
                   </ui:InvokeWorkflowFile.Arguments>
                 </ui:InvokeWorkflowFile>
@@ -144,12 +142,8 @@
               <If.Then>
                 <ui:InvokeWorkflowFile ContinueOnError="{x:Null}" DisplayName="Invoke Workflow File" sap:VirtualizedContainerService.HintSize="363,87" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_1" UnSafe="False" WorkflowFileName="Data Workflows\Word\ValidateApplicationForm.xaml">
                   <ui:InvokeWorkflowFile.Arguments>
-                    <OutArgument x:TypeArguments="scg:Dictionary(x:String, x:String)" x:Key="OUT_dictAttachmentFields">
-                      <mva:VisualBasicReference x:TypeArguments="scg:Dictionary(x:String, x:String)" ExpressionText="IN_dictAttachmentFields" />
-                    </OutArgument>
-                    <InArgument x:TypeArguments="x:String" x:Key="IN_strApplicationFilePath">
-                      <Literal x:TypeArguments="x:String">\\GFD218DF\x953922$\Documents\COFS\NewCoFSApplicationForm\TestMultiple\BP3 Test Application 2 - Dioxin Part D.docx</Literal>
-                    </InArgument>
+                    <OutArgument x:TypeArguments="scg:Dictionary(x:String, x:String)" x:Key="OUT_dictAttachmentFields">[IN_dictAttachmentFields]</OutArgument>
+                    <InArgument x:TypeArguments="x:String" x:Key="IN_strApplicationFilePath">\\GFD218DF\x953922$\Documents\COFS\NewCoFSApplicationForm\TestMultiple\BP3 Test Application 2 - Dioxin Part D.docx</InArgument>
                     <InArgument x:TypeArguments="scg:Dictionary(x:String, x:String)" x:Key="IN_dictFormFields" />
                     <InArgument x:TypeArguments="x:Boolean" x:Key="IN_boolLoading" />
                     <InArgument x:TypeArguments="x:Int32" x:Key="IN_intCertsRequested" />
@@ -169,7 +163,7 @@
                   <av:PointCollection x:Key="ConnectorLocation">300,415.5 300,487</av:PointCollection>
                 </scg:Dictionary>
               </sap:WorkflowViewStateService.ViewState>
-              <Flowchart DisplayName="Main Logic" sap:VirtualizedContainerService.HintSize="200,51" sap2010:WorkflowViewState.IdRef="Flowchart_3">
+              <Flowchart DisplayName="Main Logic" sap:VirtualizedContainerService.HintSize="744,654" sap2010:WorkflowViewState.IdRef="Flowchart_3">
                 <Flowchart.Variables>
                   <Variable x:TypeArguments="ui:Window" Name="appFileExplorer" />
                   <Variable x:TypeArguments="x:String" Name="strAddress" />
@@ -226,7 +220,7 @@
                               <OutArgument x:TypeArguments="x:String">[strAddress]</OutArgument>
                             </Assign.To>
                             <Assign.Value>
-                              <InArgument x:TypeArguments="x:String">[IN_dictAttachmentFields("OrganisationName") + Environment.NewLine + IN_dictAttachmentFields("CompanyAddress") + Environment.NewLine + IN_dictAttachmentFields("CompanyPostcode")]</InArgument>
+                              <InArgument x:TypeArguments="x:String">[IN_dictAttachmentFields("ContactName") + Environment.NewLine + IN_dictAttachmentFields("OrganisationName") + Environment.NewLine + IN_dictAttachmentFields("CompanyAddress") + Environment.NewLine + IN_dictAttachmentFields("CompanyPostcode")]</InArgument>
                             </Assign.Value>
                           </Assign>
                         </If.Then>
@@ -236,7 +230,7 @@
                               <OutArgument x:TypeArguments="x:String">[strAddress]</OutArgument>
                             </Assign.To>
                             <Assign.Value>
-                              <InArgument x:TypeArguments="x:String">[IN_dictAttachmentFields("PostalCompName") + Environment.NewLine + IN_dictAttachmentFields("PostalCompAddress") + Environment.NewLine + IN_dictAttachmentFields("PostalCompPostcode")]</InArgument>
+                              <InArgument x:TypeArguments="x:String">[IN_dictAttachmentFields("ContactName") + Environment.NewLine + IN_dictAttachmentFields("PostalCompName") + Environment.NewLine + IN_dictAttachmentFields("PostalCompAddress") + Environment.NewLine + IN_dictAttachmentFields("PostalCompPostcode")]</InArgument>
                             </Assign.Value>
                           </Assign>
                         </If.Else>
@@ -383,7 +377,7 @@
                                                         <OutArgument x:TypeArguments="x:String">[OUT_strAddressLabel]</OutArgument>
                                                       </Assign.To>
                                                       <Assign.Value>
-                                                        <InArgument x:TypeArguments="x:String">[match.Groups(1).ToString.Replace("\n", Environment.NewLine).Replace("/r", Environment.NewLine)]</InArgument>
+                                                        <InArgument x:TypeArguments="x:String">[match.Groups(1).ToString.Replace("\n", Environment.NewLine).Replace("\r", Environment.NewLine).Replace("/r", Environment.NewLine)]</InArgument>
                                                       </Assign.Value>
                                                     </Assign>
                                                     <WriteLine DisplayName="Write Line" sap:VirtualizedContainerService.HintSize="262,61" sap2010:WorkflowViewState.IdRef="WriteLine_1" Text="[match.ToString]" />
